force-app/main/default/objects/Opportunity/fields/A_o_Intercambio__c.field-meta.xml
<CustomField>
    <fullName>A_o_Intercambio__c</fullName>
    <label>Año</label>
    <length>10</length>
    <type>Text</type>
</CustomField>