force-app/main/default/objects/Opportunity/fields/Accesorios__c.field-meta.xml
<CustomField>
    <fullName>Accesorios__c</fullName>
    <label>Accesorios</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canastera</fullName>
            </value>
            <value>
                <fullName>Anti Vuelco</fullName>
            </value>
            <value>
                <fullName>Pescante</fullName>
            </value>
            <value>
                <fullName>Defensa</fullName>
            </value>
            <value>
                <fullName>Camara Retroceso</fullName>
            </value>
            <value>
                <fullName>Alarma</fullName>
            </value>
            <value>
                <fullName>Sensores Retroceso</fullName>
            </value>
            <value>
                <fullName>Ninguno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>