force-app/main/default/objects/Opportunity/fields/Actividad_Contact_Center__c.field-meta.xml
<CustomField>
    <fullName>Actividad_Contact_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actividad Contact Center</label>
    <type>Checkbox</type>
</CustomField>