force-app/main/default/objects/Opportunity/fields/Actualiza_fecha_en_Op_principal__c.field-meta.xml
<CustomField>
    <fullName>Actualiza_fecha_en_Op_principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualiza fecha en Op principal</label>
    <type>Checkbox</type>
</CustomField>