force-app/main/default/objects/Opportunity/fields/Aprobaci_n_APV__c.field-meta.xml
<CustomField>
    <fullName>Aprobaci_n_APV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación APV</label>
    <type>Checkbox</type>
</CustomField>