force-app/main/default/objects/Opportunity/fields/Aprobaci_n_Intercambio_Activa__c.field-meta.xml
<CustomField>
    <fullName>Aprobaci_n_Intercambio_Activa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación Intercambio Activa</label>
    <type>Checkbox</type>
</CustomField>