force-app/main/default/objects/Opportunity/fields/Aprobaci_n_Jefe_Autolote__c.field-meta.xml
<CustomField>
    <fullName>Aprobaci_n_Jefe_Autolote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación Jefe Autolote</label>
    <type>Checkbox</type>
</CustomField>