force-app/main/default/objects/Opportunity/fields/Asesor_Autolote__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Autolote__c</fullName>
    <label>Asesor Autolote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maryoli Membreño</fullName>
            </value>
            <value>
                <fullName>Allan Lopez</fullName>
            </value>
            <value>
                <fullName>Alejandro Rugama</fullName>
            </value>
            <value>
                <fullName>Ernesto Gutierrez</fullName>
            </value>
            <value>
                <fullName>Ernesto Arguello</fullName>
            </value>
            <value>
                <fullName>Pastor Blandon</fullName>
            </value>
            <value>
                <fullName>Jose Noel Rivera</fullName>
            </value>
            <value>
                <fullName>Irvin Guerrero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>