force-app/main/default/objects/Opportunity/fields/Asesor_de_Autos_Nuevos__c.field-meta.xml
<CustomField>
    <fullName>Asesor_de_Autos_Nuevos__c</fullName>
    <label>Asesor de Autos Nuevos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alejandro Bermudez</fullName>
            </value>
            <value>
                <fullName>Karla Mendieta</fullName>
            </value>
            <value>
                <fullName>Alexis Gonzalez</fullName>
            </value>
            <value>
                <fullName>Jesse Huete</fullName>
            </value>
            <value>
                <fullName>Katlin Raudez</fullName>
            </value>
            <value>
                <fullName>Roberto Herrera</fullName>
            </value>
            <value>
                <fullName>Hazel Sevilla</fullName>
            </value>
            <value>
                <fullName>Mariano Ricarte</fullName>
            </value>
            <value>
                <fullName>German Siles</fullName>
            </value>
            <value>
                <fullName>Denis Rivera</fullName>
            </value>
            <value>
                <fullName>Fernando Nicaragua</fullName>
            </value>
            <value>
                <fullName>Beatriz Murillo</fullName>
            </value>
            <value>
                <fullName>Marjorie Guevara</fullName>
            </value>
            <value>
                <fullName>Norlan Navarrete</fullName>
            </value>
            <value>
                <fullName>Walter Araica</fullName>
            </value>
            <value>
                <fullName>Moises J. Zepeda Calderon</fullName>
            </value>
            <value>
                <fullName>Jose Noel Rivera</fullName>
            </value>
            <value>
                <fullName>Gerald Gómez</fullName>
            </value>
            <value>
                <fullName>Gerald Gémez</fullName>
            </value>
            <value>
                <fullName>Silmalila Sarantez</fullName>
            </value>
            <value>
                <fullName>Julio C. Baez Mairena</fullName>
            </value>
            <value>
                <fullName>Jose E. Acevedo</fullName>
            </value>
            <value>
                <fullName>Maria F. Perez Chavez</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>