force-app/main/default/objects/Opportunity/fields/Asignar_Contact_Center__c.field-meta.xml
<CustomField>
    <fullName>Asignar_Contact_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asignar Contact Center</label>
    <type>Checkbox</type>
</CustomField>