force-app/main/default/objects/Opportunity/fields/Asunto_de_tarea__c.field-meta.xml
<CustomField>
    <fullName>Asunto_de_tarea__c</fullName>
    <description>Asunto de la última tarea proveniente de flujo</description>
    <label>Asunto de tarea</label>
    <length>100</length>
    <type>Text</type>
</CustomField>