force-app/main/default/objects/Opportunity/fields/Bancario_en_espera__c.field-meta.xml
<CustomField>
    <fullName>Bancario_en_espera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bancario en espera</label>
    <type>Checkbox</type>
</CustomField>