force-app/main/default/objects/Opportunity/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avanz</fullName>
            </value>
            <value>
                <fullName>BAC</fullName>
            </value>
            <value>
                <fullName>Banpro</fullName>
            </value>
            <value>
                <fullName>BDF</fullName>
            </value>
            <value>
                <fullName>Lafise</fullName>
            </value>
            <value>
                <fullName>Iniser</fullName>
            </value>
            <value>
                <fullName>Seguros América</fullName>
            </value>
            <value>
                <fullName>FICOHSA</fullName>
            </value>
            <value>
                <fullName>BANCO DE FOMENTO A LA PRODUCCION</fullName>
            </value>
            <value>
                <fullName>INVERAUTO SA</fullName>
            </value>
            <value>
                <fullName>PROMUJER LLC</fullName>
            </value>
            <value>
                <fullName>CREDIQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>