force-app/main/default/objects/Opportunity/fields/Bolsa_de_Aire_SRS__c.field-meta.xml
<CustomField>
    <fullName>Bolsa_de_Aire_SRS__c</fullName>
    <label>Bolsa de Aire (SRS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>No Aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>