force-app/main/default/objects/Opportunity/fields/C_digo_de_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_Oportunidad__c</fullName>
    <label>Código de Oportunidad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>