force-app/main/default/objects/Opportunity/fields/C_digo_de_Oportunidad_Numerico__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_Oportunidad_Numerico__c</fullName>
    <label>Código de Oportunidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>