force-app/main/default/objects/Opportunity/fields/C_dula_de_Identidad__c.field-meta.xml
<CustomField>
    <fullName>C_dula_de_Identidad__c</fullName>
    <label>Cédula de Identidad</label>
    <length>25</length>
    <type>Text</type>
</CustomField>