force-app/main/default/objects/Opportunity/fields/C_dula_de_Identidad_formulado__c.field-meta.xml
<CustomField>
    <fullName>C_dula_de_Identidad_formulado__c</fullName>
    <formula>Account.Cedula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cédula de Identidad</label>
    <type>Text</type>
</CustomField>