force-app/main/default/objects/Opportunity/fields/Calificacion_Scoring_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Calificacion_Scoring_Cuenta__c</fullName>
    <description>Scoring UAF relacionado a la Cuenta</description>
    <label>Calificacion Scoring Cuenta</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>