force-app/main/default/objects/Opportunity/fields/Calificacion_Scoring_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Calificacion_Scoring_Oportunidad__c</fullName>
    <description>Scoring UAF de la oportunidad</description>
    <label>Calificacion Scoring Oportunidad</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>