force-app/main/default/objects/Opportunity/fields/Canal_Contrata__c.field-meta.xml
<CustomField>
    <fullName>Canal_Contrata__c</fullName>
    <label>Canal de venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distribuidor Autorizado</fullName>
            </value>
            <value>
                <fullName>Sucursales Propias - Detalle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>