force-app/main/default/objects/Opportunity/fields/Cantidad_de_autolotes__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_autolotes__c</fullName>
    <label>Cantidad de autolotes</label>
    <summaryForeignKey>Vehiculo_de_la_Oportunidad__c.Oportunidad__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>