force-app/main/default/objects/Opportunity/fields/Cantidad_de_informes_aprobados__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_informes_aprobados__c</fullName>
    <label>Cantidad de informes aprobados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>