force-app/main/default/objects/Opportunity/fields/Cantidad_de_tareas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_tareas__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cantidad de tareas que tiene una oportunidad (Todas)</description>
    <label>Cantidad de tareas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>