force-app/main/default/objects/Opportunity/fields/Cantidad_de_Veh_culos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Veh_culos__c</fullName>
    <label>Cantidad de Vehículos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>