force-app/main/default/objects/Opportunity/fields/Cantidad_de_veh_culos_facturados__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_veh_culos_facturados__c</fullName>
    <label>Cantidad de vehículos facturados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>