force-app/main/default/objects/Opportunity/fields/Cantidad_de_vehiculos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_vehiculos__c</fullName>
    <formula>IF(Unidades__c &gt; 0, Unidades__c, (IF(Cantidad_de_autolotes__c &gt; 0, Cantidad_de_autolotes__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad de vehículos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>