force-app/main/default/objects/Opportunity/fields/Cedula_representante_legal__c.field-meta.xml
<CustomField>
    <fullName>Cedula_representante_legal__c</fullName>
    <label>Cédula representante legal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>