force-app/main/default/objects/Opportunity/fields/Cilindrada__c.field-meta.xml
<CustomField>
    <fullName>Cilindrada__c</fullName>
    <label>Cilindrada</label>
    <length>50</length>
    <type>Text</type>
</CustomField>