force-app/main/default/objects/Opportunity/fields/Cilindros__c.field-meta.xml
<CustomField>
    <fullName>Cilindros__c</fullName>
    <label>Cilindros</label>
    <length>10</length>
    <type>Text</type>
</CustomField>