force-app/main/default/objects/Opportunity/fields/Cliente_contest_pero_no_logr_terminar__c.field-meta.xml
<CustomField>
    <fullName>Cliente_contest_pero_no_logr_terminar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No desea responder encuesta</label>
    <type>Checkbox</type>
</CustomField>