force-app/main/default/objects/Opportunity/fields/Cliente_es_incontactable_si_el_n_mero_n__c.field-meta.xml
<CustomField>
    <fullName>Cliente_es_incontactable_si_el_n_mero_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente incontactable</label>
    <type>Checkbox</type>
</CustomField>