force-app/main/default/objects/Opportunity/fields/Codigo_Asignado_UAF__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Asignado_UAF__c</fullName>
    <formula>IF(Compa_a__r.Name =&apos;CASA PELLAS, S.A&apos;, &apos;UAF-ROS-C-XIII-161-2016&apos;,  IF(Compa_a__r.Name =&apos;KIPESA&apos;, &apos;UAF-ROS-C-XIII-259-2017&apos;,  IF(Compa_a__r.Name =&apos;V E L O S A&apos;, &apos;UAF-ROS-C-XIII-162-2016&apos;, &apos;&apos;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Asignado UAF</label>
    <type>Text</type>
</CustomField>