force-app/main/default/objects/Opportunity/fields/Color_Intercambio__c.field-meta.xml
<CustomField>
    <fullName>Color_Intercambio__c</fullName>
    <label>Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>