force-app/main/default/objects/Opportunity/fields/Comentario_Anfitri_n__c.field-meta.xml
<CustomField>
    <fullName>Comentario_Anfitri_n__c</fullName>
    <description>Contiene comentarios del anfoirtrión en caso de que el cliente regrese</description>
    <label>Comentario Anfitrión</label>
    <type>TextArea</type>
</CustomField>