force-app/main/default/objects/Opportunity/fields/Comentario_del_PIC__c.field-meta.xml
<CustomField>
    <fullName>Comentario_del_PIC__c</fullName>
    <label>Comentario del PIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>