force-app/main/default/objects/Opportunity/fields/Comprador__c.field-meta.xml
<CustomField>
    <fullName>Comprador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comprador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades (Comprador)</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>