force-app/main/default/objects/Opportunity/fields/Cu_ndo_piensa_realizar_la_compra__c.field-meta.xml
<CustomField>
    <fullName>Cu_ndo_piensa_realizar_la_compra__c</fullName>
    <label>Cuándo piensa realizar la compra?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En los próximos 30 días</fullName>
            </value>
            <value>
                <fullName>Entre 1-3 meses</fullName>
            </value>
            <value>
                <fullName>3 meses a más</fullName>
            </value>
            <value>
                <fullName>No estoy listo para comprar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>