force-app/main/default/objects/Opportunity/fields/Cuota_Total__c.field-meta.xml
<CustomField>
    <fullName>Cuota_Total__c</fullName>
    <label>Cuota Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>