force-app/main/default/objects/Opportunity/fields/D_as_abiertos_de_la_oportundiad__c.field-meta.xml
<CustomField>
    <fullName>D_as_abiertos_de_la_oportundiad__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días abiertos de la oportundiad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>