force-app/main/default/objects/Opportunity/fields/D_as_inactividad__c.field-meta.xml
<CustomField>
    <fullName>D_as_inactividad__c</fullName>
    <formula>Today() - LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días inactividad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>