force-app/main/default/objects/Opportunity/fields/Departamento_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Departamento_Sucursal__c</fullName>
    <label>Departamento Sucursal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>