force-app/main/default/objects/Opportunity/fields/Desea_realizar_intercambio__c.field-meta.xml
<CustomField>
    <fullName>Desea_realizar_intercambio__c</fullName>
    <label>Desea realizar intercambio?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>