force-app/main/default/objects/Opportunity/fields/Desea_ser_contactado_por_un_vendedor__c.field-meta.xml
<CustomField>
    <fullName>Desea_ser_contactado_por_un_vendedor__c</fullName>
    <label>Desea ser contactado por un vendedor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>