force-app/main/default/objects/Opportunity/fields/Detalle_de_perdida__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_perdida__c</fullName>
    <label>Detalle de perdida</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Razon_perdida__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Situacion politica/economica</fullName>
                <label>Situación política/económica</label>
            </value>
            <value>
                <fullName>Problemas personales</fullName>
            </value>
            <value>
                <fullName>Compro otra marca (Ext)</fullName>
                <label>Compró otra marca (Ext)</label>
            </value>
            <value>
                <fullName>Compro usado</fullName>
                <label>Compró usado</label>
            </value>
            <value>
                <fullName>No compro</fullName>
                <label>No compró</label>
            </value>
            <value>
                <fullName>Credex</fullName>
            </value>
            <value>
                <fullName>CrediQ</fullName>
            </value>
            <value>
                <fullName>Leasing AN</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Compró nuevo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>