force-app/main/default/objects/Opportunity/fields/Dia_1_intento_3__c.field-meta.xml
<CustomField>
    <fullName>Dia_1_intento_3__c</fullName>
    <label>Dia 1, intento 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>