force-app/main/default/objects/Opportunity/fields/Dias_despues_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Dias_despues_de_cierre__c</fullName>
    <formula>CloseDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias despues de cierre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>