force-app/main/default/objects/Opportunity/fields/Dispara_proceso_de_aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Dispara_proceso_de_aprobaci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar aprobación por cambio de precio</label>
    <type>Checkbox</type>
</CustomField>