force-app/main/default/objects/Opportunity/fields/Email_de_Asesor_Autos_Nuevos__c.field-meta.xml
<CustomField>
    <fullName>Email_de_Asesor_Autos_Nuevos__c</fullName>
    <label>Email de Asesor Autos Nuevos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>agonzalez@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>ajbermudez@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>bmurillo@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>drivera@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>fnicaragua@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>ggomez@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>gsiles@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>hgsevilla@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>jacevedo@velosa.com.ni</fullName>
            </value>
            <value>
                <fullName>jcbaez@kipesa.com.ni</fullName>
            </value>
            <value>
                <fullName>jhuete@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>jnrivera@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>kmendieta@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>kyraudez@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>mfperez@casapellas.com</fullName>
            </value>
            <value>
                <fullName>mguevara@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>mricarte@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>mzepeda@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>nerodriguez@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>rherrera@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>ssarante@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>waraica@casapellas.com.ni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>