force-app/main/default/objects/Opportunity/fields/Email_de_Evaluador__c.field-meta.xml
<CustomField>
    <fullName>Email_de_Evaluador__c</fullName>
    <label>Email de Evaluador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ejgutierrez@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>earguello@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>ailopez@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>mmembreno@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>arugama@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>ibarahona@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>fnicaragua@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>bmurillo@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>mguevara@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>nerodriguez@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>pblandon@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>iguerrero@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>jnrivera@casapellas.com.ni</fullName>
            </value>
            <value>
                <fullName>gramirez@casapellas.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>