force-app/main/default/objects/Opportunity/fields/Emision_de_Circulacion__c.field-meta.xml
<CustomField>
    <fullName>Emision_de_Circulacion__c</fullName>
    <label>Emisión de Circulación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>