force-app/main/default/objects/Opportunity/fields/Empresa_Aseguradora__c.field-meta.xml
<CustomField>
    <fullName>Empresa_Aseguradora__c</fullName>
    <label>Empresa Aseguradora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seguros América</fullName>
            </value>
            <value>
                <fullName>Seguros Lafise</fullName>
            </value>
            <value>
                <fullName>ASSA</fullName>
            </value>
            <value>
                <fullName>INISER</fullName>
            </value>
            <value>
                <fullName>MAPFRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>