force-app/main/default/objects/Opportunity/fields/Espejos__c.field-meta.xml
<CustomField>
    <fullName>Espejos__c</fullName>
    <label>Espejos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eléctricos</fullName>
            </value>
            <value>
                <fullName>Manuales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>