force-app/main/default/objects/Opportunity/fields/Esquela__c.field-meta.xml
<CustomField>
    <fullName>Esquela__c</fullName>
    <label>Esquela</label>
    <length>255</length>
    <type>Text</type>
</CustomField>