force-app/main/default/objects/Opportunity/fields/Estado_de_Bolsa_de_Aire_SRS__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Bolsa_de_Aire_SRS__c</fullName>
    <label>Estado de Bolsa de Aire (SRS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Aplica</fullName>
            </value>
            <value>
                <fullName>SRS Buenas</fullName>
            </value>
            <value>
                <fullName>SRS Estalladas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>