force-app/main/default/objects/Opportunity/fields/Etapa_Bancaria__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Bancaria__c</fullName>
    <label>Etapa</label>
    <length>25</length>
    <type>Text</type>
</CustomField>